--- a/BetterTabControl/AutoFilterDataGrid.xaml
+++ b/BetterTabControl/AutoFilterDataGrid.xaml
@@ -75,7 +75,18 @@
         </Style>
     </UserControl.Resources>
     <Grid>
-        <DataGrid x:Name="dataGrid" Background="{Binding Background, ElementName=userControl}" BorderBrush="{Binding BorderBrush, ElementName=userControl}" Foreground="{Binding Foreground, ElementName=userControl}" OpacityMask="{Binding OpacityMask, ElementName=userControl}" ColumnHeaderStyle="{DynamicResource FilterHeaderStyle}" AlternatingRowBackground="#FFC0FFC0" ItemsSource="{Binding DataSource, ElementName=userControl}" IsReadOnly="{Binding IsReadOnly, ElementName=userControl}" Opacity="{Binding Opacity, ElementName=userControl}" FontFamily="{Binding FontFamily, ElementName=userControl}" FontSize="{Binding FontSize, ElementName=userControl}" FontWeight="{Binding FontWeight, ElementName=userControl}" FontStyle="{Binding FontStyle, ElementName=userControl}"/>
+        <DataGrid x:Name="dataGrid" Background="{Binding Background, ElementName=userControl}" BorderBrush="{Binding BorderBrush, ElementName=userControl}" Foreground="{Binding Foreground, ElementName=userControl}" OpacityMask="{Binding OpacityMask, ElementName=userControl}" ColumnHeaderStyle="{DynamicResource FilterHeaderStyle}" AlternatingRowBackground="#FFC0FFC0" ItemsSource="{Binding DataSource, ElementName=userControl}" IsReadOnly="{Binding IsReadOnly, ElementName=userControl}" Opacity="{Binding Opacity, ElementName=userControl}" FontFamily="{Binding FontFamily, ElementName=userControl}" FontSize="{Binding FontSize, ElementName=userControl}" FontWeight="{Binding FontWeight, ElementName=userControl}" FontStyle="{Binding FontStyle, ElementName=userControl}" RowHeaderWidth="{DynamicResource {x:Static SystemParameters.MenuCheckmarkWidthKey}}">
+            <DataGrid.ContextMenu>
+                <ContextMenu>
+                    <MenuItem CommandTarget="{Binding ContextMenu, ElementName=dataGrid}" Command="ApplicationCommands.Cut" Header="Cut"/>
+                    <MenuItem CommandTarget="{Binding ElementName=dataGrid, Mode=OneWay}" Command="ApplicationCommands.Copy" Header="Copy"/>
+                    <MenuItem CommandTarget="{Binding ElementName=dataGrid, Mode=OneWay}" Command="ApplicationCommands.Paste" Header="Paste"/>
+                    <Separator/>
+                    <MenuItem CommandTarget="{Binding ElementName=dataGrid, Mode=OneWay}" Command="ApplicationCommands.Undo" Header="Undo"/>
+                    <MenuItem CommandTarget="{Binding ElementName=dataGrid, Mode=OneWay}" Command="ApplicationCommands.Redo" Header="Redo"/>
+                </ContextMenu>
+            </DataGrid.ContextMenu>
+        </DataGrid>
 
     </Grid>
 </UserControl>
