--- a/BetterTabControlTest/App.xaml
+++ b/BetterTabControlTest/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:BetterTabControlTest"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:SampleDataSource="clr-namespace:Expression.Blend.SampleData.SampleDataSource" mc:Ignorable="d" x:Class="BetterTabControlTest.App"
-             StartupUri="Window1.xaml">
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
 
         <ResourceDictionary>
