--- a/BetterTabControlTest/MainWindow.xaml
+++ b/BetterTabControlTest/MainWindow.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <BetterTabs:BetterTabControl DefaultContentType="{x:Type local:TestDataGrid}">
+        <BetterTabs:BetterTabControl >
         </BetterTabs:BetterTabControl>
     </Grid>
 </Window>
