changed adding new tab to select the newly added tab

--- a/BetterTabControlTest/MainWindow.xaml
+++ b/BetterTabControlTest/MainWindow.xaml
@@ -8,7 +8,6 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <BetterTabs:BetterTabControl DefaultContentType="{x:Type Button}">
-        </BetterTabs:BetterTabControl>
+        <BetterTabs:BetterTabControl x:Name="Tabs" />
     </Grid>
 </Window>
