--- a/BetterTabControlTest/App.xaml
+++ b/BetterTabControlTest/App.xaml
@@ -2,11 +2,12 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:BetterTabControlTest"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:SampleDataSource="clr-namespace:Expression.Blend.SampleData.SampleDataSource" mc:Ignorable="d" x:Class="BetterTabControlTest.App"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:SampleDataSource="clr-namespace:Expression.Blend.SampleData.SampleDataSource" xmlns:SampleDataSource1="clr-namespace:Expression.Blend.SampleData.SampleDataSource1" mc:Ignorable="d" x:Class="BetterTabControlTest.App"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
 
         <ResourceDictionary>
+            <SampleDataSource1:SampleDataSource1 x:Key="SampleDataSource1" d:IsDataSource="True"/>
             <SampleDataSource:SampleDataSource x:Key="SampleDataSource" d:IsDataSource="True"/>
         </ResourceDictionary>
 
