--- a/BetterTabControl/Themes/Generic.xaml
+++ b/BetterTabControl/Themes/Generic.xaml
@@ -1,14 +1,19 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:BetterTabs"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+    xmlns:System="clr-namespace:System;assembly=mscorlib"
+    mc:Ignorable="d"
     xmlns:Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero">
     <local:ChangeColorBrightness x:Key="ChangeColorBrightness"/>
+    <local:TabPresenterWidthCalculator x:Key="TabPresenterWidthCalculator"/>
     <FontWeight x:Key="BoldFont">Bold</FontWeight>
     <ItemsPanelTemplate x:Key="TabPanelTemplate">
         <StackPanel IsItemsHost="True" Orientation="Horizontal"/>
     </ItemsPanelTemplate>
+    <System:Double x:Key="NewTabWidth"/>
     <Style x:Key="ButtonFocusVisual">
         <Setter Property="Control.Template">
             <Setter.Value>
@@ -115,62 +120,80 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="local:BetterTabControl">
-                    <Grid x:Name="baseGrid">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
-                        </Grid.ColumnDefinitions>
+                    <Grid x:Name="baseGrid" Width="{TemplateBinding ActualWidth}" d:DesignWidth="800" Height="{TemplateBinding ActualHeight}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
                             <RowDefinition/>
                         </Grid.RowDefinitions>
-
-                        <Grid x:Name="TabBar" Margin="0" AllowDrop="True">
+                        <Grid x:Name="TabBar" Margin="0" AllowDrop="True" ClipToBounds="True">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto">
+                                    <ColumnDefinition.MaxWidth>
+                                        <MultiBinding Converter="{StaticResource TabPresenterWidthCalculator}">
+                                            <Binding ElementName="TabBar" Path="ActualWidth"/>
+                                            <Binding ElementName="NewTabButton" Path="ActualWidth"/>
+                                            <Binding ElementName="ScrollButtons" Path="ActualWidth"/>
+                                        </MultiBinding>
+                                    </ColumnDefinition.MaxWidth>
+                                </ColumnDefinition>
+                                <ColumnDefinition MinWidth="{Binding ActualWidth, ElementName=NewTabButton, Mode=OneWay}" Width="*"/>
+                                <ColumnDefinition Width="{Binding ActualWidth, ElementName=ScrollButtons, Mode=OneWay}"/>
+                            </Grid.ColumnDefinitions>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="3" MaxHeight="3" MinHeight="3"/>
                             </Grid.RowDefinitions>
-                            <DockPanel x:Name="tabsGrid" Background="{TemplateBinding BarBackgroundColor}" AllowDrop="True" LastChildFill="False" Height="Auto" Width="Auto">
-
-                                <ItemsControl x:Name="TabsPresenter" HorizontalAlignment="Stretch" Height="Auto" VerticalAlignment="Stretch" Width="Auto" ItemsSource="{TemplateBinding Tabs}" VerticalContentAlignment="Stretch">
-                                    <ItemsControl.ItemsPanel>
-                                        <ItemsPanelTemplate>
-                                            <StackPanel IsItemsHost="True" Orientation="Horizontal"/>
-                                        </ItemsPanelTemplate>
-                                    </ItemsControl.ItemsPanel>
-                                </ItemsControl>
-
-
-                                <Button x:Name="NewTabButton" Content="{TemplateBinding NewTabDisplayText}" Height="27" MinWidth="20" FontWeight="Bold" MinHeight="17" MaxHeight="47" MaxWidth="50" FocusVisualStyle="{x:Null}" Width="20">
-                                    <Button.Style>
-                                        <Style TargetType="{x:Type Button}">
-                                            <Setter Property="Padding" Value="1"/>
-                                            <Setter Property="Template">
-                                                <Setter.Value>
-                                                    <ControlTemplate TargetType="{x:Type Button}">
-                                                        <Border x:Name="border" Margin="0">
-                                                            <ContentPresenter x:Name="contentPresenter" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" Height="Auto" Width="Auto" HorizontalAlignment="Center" VerticalAlignment="Center" TextBlock.FontWeight="Bold"/>
-                                                        </Border>
-                                                        <ControlTemplate.Triggers>
-                                                            <Trigger Property="IsFocused" Value="False"/>
-                                                            <Trigger Property="IsMouseOver" Value="True">
-                                                                <Setter Property="Background" TargetName="border" Value="{Binding MouseOverTabBackgroundColor, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
-                                                                <Setter Property="TextBlock.Foreground" TargetName="contentPresenter" Value="{Binding MouseOverTabTextColor, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
-                                                            </Trigger>
-                                                            <Trigger Property="IsPressed" Value="True">
-                                                                <Setter Property="TextBlock.Foreground" TargetName="contentPresenter" Value="{Binding MouseOverTabTextColor, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
-                                                                <Setter Property="Background" TargetName="border" Value="{Binding MouseOverTabBackgroundColor, ConverterParameter=-.25, Converter={StaticResource ChangeColorBrightness}, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
-                                                            </Trigger>
-                                                            <Trigger Property="IsFocused" Value="True"/>
-                                                        </ControlTemplate.Triggers>
-                                                    </ControlTemplate>
-                                                </Setter.Value>
-                                            </Setter>
-                                        </Style>
-                                    </Button.Style>
-                                </Button>
-
-                            </DockPanel>
-                            <Rectangle x:Name="Ribbon" Fill="{TemplateBinding RibbonColor}" Height="3" Margin="0" Grid.Row="1"/>
+                            <Grid x:Name="ScrollButtons" HorizontalAlignment="Left" Height="Auto" VerticalAlignment="Stretch" Width="Auto" Margin="0" Grid.Column="2">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+                                <Button x:Name="ScrollRight" Content="&gt;" Height="Auto" VerticalAlignment="Stretch" Margin="0" Grid.Column="1" FontWeight="Bold" Command="ComponentCommands.ScrollPageRight" CommandTarget="{Binding ElementName=TabsPresenter, Mode=OneWay}"/>
+                                <Button x:Name="ScrollLeft" Content="&lt;" Height="Auto" VerticalAlignment="Stretch" Width="Auto" Margin="0" FontWeight="Bold" Command="ComponentCommands.ScrollPageLeft" CommandTarget="{Binding ElementName=TabsPresenter, Mode=OneWay}"/>
+                            </Grid>
+                            <Rectangle x:Name="Ribbon" Fill="{TemplateBinding RibbonColor}" Height="3" Margin="0" Grid.Row="1" Grid.ColumnSpan="3"/>
+                            <ItemsControl x:Name="TabsPresenter" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="Auto" VerticalContentAlignment="Stretch" Margin="0" ClipToBounds="True" Grid.ColumnSpan="1" ItemsSource="{Binding Tabs, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}" ScrollViewer.CanContentScroll="True">
+                                <ItemsControl.Template>
+                                    <ControlTemplate TargetType="{x:Type ItemsControl}">
+                                        <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" Padding="{TemplateBinding Padding}" SnapsToDevicePixels="True" ScrollViewer.VerticalScrollBarVisibility="Disabled">
+                                            <ItemsPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" ScrollViewer.HorizontalScrollBarVisibility="Auto"/>
+                                        </Border>
+                                    </ControlTemplate>
+                                </ItemsControl.Template>
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <StackPanel IsItemsHost="True" Orientation="Horizontal" CanHorizontallyScroll="True"/>
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                            </ItemsControl>
+                            <Button x:Name="NewTabButton" Content="{TemplateBinding NewTabDisplayText}" Height="27" MinWidth="20" FontWeight="Bold" MinHeight="17" MaxHeight="47" MaxWidth="50" FocusVisualStyle="{x:Null}" Width="Auto" Margin="0" HorizontalAlignment="Left" Grid.Column="1">
+                                <Button.Style>
+                                    <Style TargetType="{x:Type Button}">
+                                        <Setter Property="Padding" Value="1"/>
+                                        <Setter Property="Template">
+                                            <Setter.Value>
+                                                <ControlTemplate TargetType="{x:Type Button}">
+                                                    <Border x:Name="border" Margin="0">
+                                                        <ContentPresenter x:Name="contentPresenter" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" Height="Auto" Width="Auto" HorizontalAlignment="Center" VerticalAlignment="Center" TextBlock.FontWeight="Bold"/>
+                                                    </Border>
+                                                    <ControlTemplate.Triggers>
+                                                        <Trigger Property="IsFocused" Value="False"/>
+                                                        <Trigger Property="IsMouseOver" Value="True">
+                                                            <Setter Property="Background" TargetName="border" Value="{Binding MouseOverTabBackgroundColor, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
+                                                            <Setter Property="TextBlock.Foreground" TargetName="contentPresenter" Value="{Binding MouseOverTabTextColor, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
+                                                        </Trigger>
+                                                        <Trigger Property="IsPressed" Value="True">
+                                                            <Setter Property="TextBlock.Foreground" TargetName="contentPresenter" Value="{Binding MouseOverTabTextColor, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
+                                                            <Setter Property="Background" TargetName="border" Value="{Binding MouseOverTabBackgroundColor, ConverterParameter=-.25, Converter={StaticResource ChangeColorBrightness}, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
+                                                        </Trigger>
+                                                        <Trigger Property="IsFocused" Value="True"/>
+                                                    </ControlTemplate.Triggers>
+                                                </ControlTemplate>
+                                            </Setter.Value>
+                                        </Setter>
+                                    </Style>
+                                </Button.Style>
+                            </Button>
                         </Grid>
                         <ContentControl x:Name="CurrentContent" Content="{TemplateBinding SelectedContent}" Grid.Row="1" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" ContentTemplate="{TemplateBinding SelectedContentTemplate}" DataContext="{TemplateBinding SelectedTab}"/>
 
