--- a/BetterTabControlTest/MainWindow.xaml
+++ b/BetterTabControlTest/MainWindow.xaml
@@ -5,14 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BetterTabControlTest"
         xmlns:System="clr-namespace:System;assembly=mscorlib"
-        xmlns:BetterDataGrid="clr-namespace:BetterDataGrid;assembly=AutoFilterDataGrid"
         xmlns:SampleData="clr-namespace:Expression.Blend.SampleData.SampleDataSource"
         xmlns:BetterTabs="clr-namespace:BetterTabs;assembly=BetterTabControl" x:Class="BetterTabControlTest.MainWindow"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Window.Resources>
         <DataTemplate x:Key="TestDataTemplate" DataType="{x:Type SampleData:SampleDataSource}">
-            <BetterDataGrid:AutoFilterDataGrid ItemsSource="{Binding Collection}" />
+            <Button>Test</Button>
         </DataTemplate>
     </Window.Resources>
     <Grid DataContext="{Binding Source={StaticResource SampleDataSource1}}">
