--- a/BetterTabControl/Themes/Generic.xaml
+++ b/BetterTabControl/Themes/Generic.xaml
@@ -148,8 +148,8 @@
                                     <ColumnDefinition Width="Auto"/>
                                     <ColumnDefinition Width="Auto"/>
                                 </Grid.ColumnDefinitions>
-                                <Button x:Name="ScrollRight" Content="&gt;" Height="Auto" VerticalAlignment="Stretch" Margin="0" Grid.Column="1" FontWeight="Bold" Command="ComponentCommands.ScrollPageRight" CommandTarget="{Binding ElementName=TabsPresenter, Mode=OneWay}"/>
-                                <Button x:Name="ScrollLeft" Content="&lt;" Height="Auto" VerticalAlignment="Stretch" Width="Auto" Margin="0" FontWeight="Bold" Command="ComponentCommands.ScrollPageLeft" CommandTarget="{Binding ElementName=TabsPresenter, Mode=OneWay}"/>
+                                <Button x:Name="ScrollRight" Content="&gt;" Height="Auto" VerticalAlignment="Stretch" Margin="0" Grid.Column="1" FontWeight="Bold" Command="ComponentCommands.ScrollPageRight" CommandTarget="{Binding Mode=OneWay, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
+                                <Button x:Name="ScrollLeft" Content="&lt;" Height="Auto" VerticalAlignment="Stretch" Width="Auto" Margin="0" FontWeight="Bold" Command="ComponentCommands.ScrollPageLeft" CommandTarget="{Binding Mode=OneWay, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}"/>
                             </Grid>
                             <Rectangle x:Name="Ribbon" Fill="{TemplateBinding RibbonColor}" Height="3" Margin="0" Grid.Row="1" Grid.ColumnSpan="3"/>
                             <ItemsControl x:Name="TabsPresenter" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="Auto" VerticalContentAlignment="Stretch" Margin="0" ClipToBounds="True" Grid.ColumnSpan="1" ItemsSource="{Binding Tabs, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:BetterTabControl}}}" ScrollViewer.CanContentScroll="True">
@@ -162,7 +162,7 @@
                                 </ItemsControl.Template>
                                 <ItemsControl.ItemsPanel>
                                     <ItemsPanelTemplate>
-                                        <StackPanel IsItemsHost="True" Orientation="Horizontal" CanHorizontallyScroll="True"/>
+                                        <StackPanel x:Name="StackPanel" IsItemsHost="True" Orientation="Horizontal" CanHorizontallyScroll="True"/>
                                     </ItemsPanelTemplate>
                                 </ItemsControl.ItemsPanel>
                             </ItemsControl>
